feat: featureTypes crud
