# src/featureTypes/controllers/featureTypesController.ts
@@ -3,17 +3,20 @@ import { StatusCodes } from 'http-status-codes';
 import { injectable } from 'tsyringe';
 
 import { FeatureTypesManager } from '../models/featureTypesManager';
-import { FeatureTypeRequest, FeatureTypesRequest, GetFeatureTypesQueryParams, GetFeatureTypesResponse } from '../../common/interfaces';
-//import { getWorkspacesResponse } from '../../common/interfaces';
+import {
+  DeleteQueryParams,
+  FeatureTypeBodyRequest,
+  FeatureTypeRequest,
+  FeatureTypesRequest,
+  GetFeatureTypesQueryParams,
+  GetFeatureTypesResponse,
+  MessageResponse,
+} from '../../common/interfaces';
 
 type GetFeatureTypesHandler = RequestHandler<FeatureTypesRequest, GetFeatureTypesResponse, unknown, GetFeatureTypesQueryParams>;
 type GetFeatureTypeHandler = RequestHandler<FeatureTypeRequest, unknown, unknown>;
-
-// type CreateWorkspaceHandler = RequestHandler<undefined, undefined, WorkspaceRequest>;
-// type GetWorkspacesHandler = RequestHandler<undefined, GetWorkspacesResponse, unknown>;
-
-// type DeleteWorkspaceHandler = RequestHandler<WorkspaceRequest, MessageResponse, unknown, DeleteWorkspaceQueryParams>;
-// type UpdateWorkspaceHandler = RequestHandler<UpdateWorkspaceRequest, undefined, unknown>;
+type DeleteFeatureTypeHandler = RequestHandler<FeatureTypeRequest, MessageResponse, unknown, DeleteQueryParams>;
+type CreateFeatureTypeHandler = RequestHandler<FeatureTypesRequest, unknown, FeatureTypeBodyRequest>;
 
 @injectable()
 export class FeatureTypesController {
@@ -31,50 +34,34 @@ export class FeatureTypesController {
     }
   };
 
-    public getFeatureType: GetFeatureTypeHandler = async (req, res, next) => {
-      try {
-        const { workspaceName, dataStoreName , featureTypeName } = req.params;
-        const featureType = await this.featureTypesManager.getFeatureType(workspaceName, dataStoreName , featureTypeName);
-        res.status(StatusCodes.OK).send(featureType);
-      } catch (error) {
-        next(error);
-      }
-    };
+  public getFeatureType: GetFeatureTypeHandler = async (req, res, next) => {
+    try {
+      const { workspaceName, dataStoreName, featureTypeName } = req.params;
+      const featureType = await this.featureTypesManager.getFeatureType(workspaceName, dataStoreName, featureTypeName);
+      res.status(StatusCodes.OK).send(featureType);
+    } catch (error) {
+      next(error);
+    }
+  };
 
-  //   public deleteFeatureType: DeleteWorkspaceHandler = async (req, res, next) => {
-  //     try {
-  //       const isRecursive = req.query.isRecursive ?? false;
-  //       const workspaceName = req.params.workspaceName;
-  //       const dataStoreName = req.params.dataStoreName;
-  //       const featureTypeName = req.params.featureTypeName;
-  //       await this.featureTypesManager.deleteFeatureType(workspaceName, dataStoreName, featureTypeName,isRecursive);
-  //       res.status(StatusCodes.OK).send({ message: 'OK' });
-  //     } catch (error) {
-  //       next(error);
-  //     }
-  //   };
+  public deleteFeatureType: DeleteFeatureTypeHandler = async (req, res, next) => {
+    try {
+      const isRecursive = req.query.isRecursive;
+      const { workspaceName, dataStoreName, featureTypeName } = req.params;
+      await this.featureTypesManager.deleteFeatureType(workspaceName, dataStoreName, featureTypeName, isRecursive);
+      res.status(StatusCodes.OK).send({ message: 'OK' });
+    } catch (error) {
+      next(error);
+    }
+  };
 
-  //   public createFeatureType: CreateWorkspaceHandler = async (req, res, next) => {
-  //     try {
-  //         const workspaceName = req.params.workspaceName;
-  //         const dataStoreName = req.params.dataStoreName;
-  //       await this.featureTypesManager.createFeatureType(workspaceName);
-  //       res.status(StatusCodes.CREATED).send();
-  //     } catch (error) {
-  //       next(error);
-  //     }
-  //   };
-
-  //   public updateFeatureType: UpdateWorkspaceHandler = async (req, res, next) => {
-  //     try {
-  //         const workspaceName = req.params.workspaceName;
-  //         const dataStoreName = req.params.dataStoreName;
-  //         const featureTypeName = req.params.featureTypeName;
-
-  //       await this.featureTypesManager.updateFeatureTypes(workspaceName, workspaceNewName);
-  //       res.status(StatusCodes.OK).send();
-  //     } catch (error) {
-  //       next(error);
-  //     }
-  //   };
+  public createFeatureType: CreateFeatureTypeHandler = async (req, res, next) => {
+    try {
+      const { workspaceName, dataStoreName } = req.params;
+      await this.featureTypesManager.createFeatureType(workspaceName, dataStoreName, req.body);
+      res.status(StatusCodes.CREATED).send();
+    } catch (error) {
+      next(error);
+    }
+  };
 }
