# src/utils/convertors/responseConverter.ts
@@ -1,7 +1,11 @@
 import { GeoserverGetDataStoreResponse, GeoserverGetDataStoresResponse } from '../../common/geoserver/models/dataStore';
-import { GeoserverGetFeatureTypesResponse } from '../../common/geoserver/models/featureType';
+import {
+  GeoserverFeatureTypeResponse,
+  GeoserverGetConfiguredFeatureTypesResponse,
+  GeoserverGetFeatureTypesResponse,
+} from '../../common/geoserver/models/featureType';
 import { GeoserverGetWorkspacesResponse } from '../../common/geoserver/models/workspace';
-import { DataStore, GetDataStoreResponse, GetFeatureTypesResponse, Workspace } from '../../common/interfaces';
+import { DataStore, GetDataStoreResponse, GetFeatureTypeResponse, GetFeatureTypesResponse, Workspace } from '../../common/interfaces';
 
 /* This file contains functions that converts outputs from the Geo server to the response output the api expects to receive */
 export const workspaceResponseConverter = (geoserverResponse: GeoserverGetWorkspacesResponse): Workspace[] => {
@@ -18,9 +22,29 @@ export const dataStoresResponseConverter = (geoserverResponse: GeoserverGetDataS
   }));
 };
 
-export const featureTypesResponseConverter = (geoserverResponse: GeoserverGetFeatureTypesResponse): GetFeatureTypesResponse => {
-  return geoserverResponse.list.string;
-}
+export const featureTypesResponseConverter = (
+  geoserverResponse: GeoserverGetFeatureTypesResponse | GeoserverGetConfiguredFeatureTypesResponse,
+  list: string
+): GetFeatureTypesResponse => {
+  if (list === 'configured') {
+    const configuredResponse = geoserverResponse as GeoserverGetConfiguredFeatureTypesResponse;
+    if (!configuredResponse.featureTypes.featureType) {
+      return [];
+    }
+    return configuredResponse.featureTypes.featureType.map((feature) => ({
+      name: feature.name,
+      link: feature.href,
+    }));
+  } else {
+    const simpleResponse = geoserverResponse as GeoserverGetFeatureTypesResponse;
+    if (!simpleResponse.list.string) {
+      return [];
+    }
+    return simpleResponse.list.string.map((featureName) => ({
+      name: featureName,
+    }));
+  }
+};
 
 export const dataStoreResponseConverter = (dataStore: GeoserverGetDataStoreResponse['dataStore']): GetDataStoreResponse => {
   const connectionParams = dataStore.connectionParameters.entry.reduce((acc, param) => {
@@ -38,5 +62,18 @@ export const dataStoreResponseConverter = (dataStore: GeoserverGetDataStoreRespo
     dbType: connectionParams['dbtype'],
     dbName: connectionParams['database'],
     sslMode: connectionParams['SSL mode'],
+  };
+};
+
+export const featureTypeResponseConverter = (geoserverResponse: GeoserverFeatureTypeResponse): GetFeatureTypeResponse => {
+  const { name, srs, maxFeatures, attributes, nativeName, enabled } = geoserverResponse.featureType;
+
+  return {
+    name,
+    enabled,
+    srs,
+    maxFeatures,
+    attributes,
+    tableName: nativeName, // Mapping nativeName to tableName
   };
 };
